fix(deps): Add ruff and bandit to development dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dev = [
     "ruff",      
     "black",     
     "mypy",     
-    "pytest"    
+    "pytest",
+    "bandit"
 ]
 
 [build-system]
