fix(ci): Update ci.yml extra flag for uv sync

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       run: pip install uv
 
     - name: Install dependencies
-      run: uv sync --dev
+      run: uv sync --extra dev
 
     - name: Run Ruff Linter and Formatter
       run: |
